--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,13 +4,15 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "sls deploy"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
+    "@middy/http-cors": "^3.1.0",
     "@middy/http-json-body-parser": "^2.5.3"
   },
   "devDependencies": {
