--- a/product-service/package.json
+++ b/product-service/package.json
@@ -5,6 +5,7 @@
   "main": "serverless.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-swagger": "sls generate-swagger",
     "deploy": "sls deploy"
   },
   "engines": {
@@ -22,6 +23,7 @@
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
+    "serverless-auto-swagger": "^2.8.0",
     "serverless-esbuild": "^1.23.3",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
