--- a/product-service/tsconfig.json
+++ b/product-service/tsconfig.json
@@ -4,11 +4,14 @@
     "lib": ["ESNext"],
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "removeComments": true,
     "sourceMap": true,
     "target": "ES2020",
-    "outDir": "lib"
+    "outDir": "lib",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "module": "CommonJS",
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
