--- a/product-service/package.json
+++ b/product-service/package.json
@@ -18,13 +18,15 @@
     "@middy/core": "^2.5.3",
     "@middy/http-cors": "^3.1.0",
     "@middy/http-json-body-parser": "^2.5.3",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^28.1.6",
     "@types/node": "^14.14.25",
+    "@types/pg": "^8.6.5",
     "esbuild": "^0.14.11",
     "jest": "^28.1.3",
     "json-schema-to-ts": "^1.5.0",
