--- a/product-service/package.json
+++ b/product-service/package.json
@@ -19,7 +19,8 @@
     "@middy/http-cors": "^3.1.0",
     "@middy/http-json-body-parser": "^2.5.3",
     "http-status-codes": "^2.2.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
