--- a/product-service/package.json
+++ b/product-service/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
+    "@middy/event-normalizer": "^3.1.0",
     "@middy/http-cors": "^3.1.0",
     "@middy/http-json-body-parser": "^2.5.3",
     "http-status-codes": "^2.2.0",
